--- a/Harden System Security/Strings/en-US/Resources.resw
+++ b/Harden System Security/Strings/en-US/Resources.resw
@@ -4092,4 +4092,67 @@ Thumbprint: {3}</value>
     <comment>Protection Category Description</comment>
     <value>Apply the recommended overrides for the Microsoft Security Baselines to restore some of the important functionalities disabled by them.</value>
   </data>
+  <data name="DeviceUsageIntent-Development-Title" xml:space="preserve">
+    <value>Development</value>
+  </data>
+  <data name="DeviceUsageIntent-Development-Description" xml:space="preserve">
+    <value>Built for writing and testing software. Uses secure defaults while allowing common developer tools and local builds without unnecessary restrictions.</value>
+  </data>
+  <data name="DeviceUsageIntent-Gaming-Title" xml:space="preserve">
+    <value>Gaming</value>
+  </data>
+  <data name="DeviceUsageIntent-Gaming-Description" xml:space="preserve">
+    <value>Tuned for performance and compatibility with games. Keeps essential protections while avoiding settings that can impact gameplay.</value>
+  </data>
+  <data name="DeviceUsageIntent-School-Title" xml:space="preserve">
+    <value>School</value>
+  </data>
+  <data name="DeviceUsageIntent-School-Description" xml:space="preserve">
+    <value>Suitable for students, keeps compatibility with learning apps, avoids heavy enterprise controls.</value>
+  </data>
+  <data name="DeviceUsageIntent-Business-Title" xml:space="preserve">
+    <value>Business</value>
+  </data>
+  <data name="DeviceUsageIntent-Business-Description" xml:space="preserve">
+    <value>Everyday corporate device with strong protections for work data and accounts. Balanced for productivity with sensible access, logging, and update behavior.</value>
+  </data>
+  <data name="DeviceUsageIntent-SpecializedAccessWorkstation-Title" xml:space="preserve">
+    <value>Specialized Access Workstation</value>
+  </data>
+  <data name="DeviceUsageIntent-SpecializedAccessWorkstation-Description" xml:space="preserve">
+    <value>The Specialized security user demands a more controlled environment while still being able to do activities such as email and web browsing in a simple-to-use experience.</value>
+  </data>
+  <data name="DeviceUsageIntent-PrivilegedAccessWorkstation-Title" xml:space="preserve">
+    <value>Privileged Access Workstation</value>
+  </data>
+  <data name="DeviceUsageIntent-PrivilegedAccessWorkstation-Description" xml:space="preserve">
+    <value>This is the highest security configuration designed for extremely sensitive roles that would have a significant or material impact on the organization if their account was compromised.</value>
+  </data>
+  <data name="ApplyIntentBasedSecurityMeasuresButton.Content" xml:space="preserve">
+    <value>Apply</value>
+  </data>
+  <data name="ApplyIntentBasedSecurityMeasuresButton.ToolTipService.ToolTip" xml:space="preserve">
+  <value>Apply all of the security measures shown below that are based on the device usage intents that you selected.</value>
+  </data>
+  <data name="ApplyIntentBasedSecurityMeasuresButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Apply all of the security measures shown below that are based on the device usage intents that you selected.</value>
+  </data>
+  <data name="ResultingSecurityMeasures.Text" xml:space="preserve">
+    <value>Resulting security measures</value>
+  </data>
+  <data name="ResultingSecurityMeasuresCaption.Text" xml:space="preserve">
+    <value>These will be applied when you press Apply.</value>
+  </data>
+  <data name="SelectDeviceIntents.Text" xml:space="preserve">
+    <value>Select Device Intents</value>
+  </data>
+  <data name="SelectDeviceIntentsCaption.Text" xml:space="preserve">
+    <value>Choose one or more intents to tailor the applied security configuration.</value>
+  </data>
+  <data name="Presets.Text" xml:space="preserve">
+    <value>Presets</value>
+  </data>
+    <data name="DeviceIntents.Text" xml:space="preserve">
+    <value>Device Intents</value>
+  </data>
 </root>
