--- a/Harden System Security/Strings/he-IL/Resources.resw
+++ b/Harden System Security/Strings/he-IL/Resources.resw
@@ -4092,4 +4092,67 @@
     <comment>Protection Category Description</comment>
     <value>החילו את העקיפות המומלצות עבור קווי הבסיס לאבטחה של Microsoft כדי לשחזר חלק מהיכולות החשובות שנוטרלו על-ידם.</value>
   </data>
+  <data name="DeviceUsageIntent-Development-Title" xml:space="preserve">
+    <value>פיתוח</value>
+  </data>
+  <data name="DeviceUsageIntent-Development-Description" xml:space="preserve">
+    <value>מיועד לכתיבה ובדיקת תוכנה. עושה שימוש בברירות מחדל מאובטחות תוך מתן אפשרות לכלי פיתוח נפוצים ולבניות מקומיות ללא מגבלות מיותרות.</value>
+  </data>
+  <data name="DeviceUsageIntent-Gaming-Title" xml:space="preserve">
+    <value>משחקים</value>
+  </data>
+  <data name="DeviceUsageIntent-Gaming-Description" xml:space="preserve">
+    <value>מכויל לביצועים ולתאימות עם משחקים. שומר על שכבות ההגנה ההכרחיות תוך הימנעות מהגדרות שעלולות להשפיע על חוויית המשחק.</value>
+  </data>
+  <data name="DeviceUsageIntent-School-Title" xml:space="preserve">
+    <value>לימודים</value>
+  </data>
+  <data name="DeviceUsageIntent-School-Description" xml:space="preserve">
+    <value>מתאים לסטודנטים ולתלמידים, שומר על תאימות לאפליקציות לימודיות, ונמנע מבקרות ארגוניות כבדות.</value>
+  </data>
+  <data name="DeviceUsageIntent-Business-Title" xml:space="preserve">
+    <value>עסקי</value>
+  </data>
+  <data name="DeviceUsageIntent-Business-Description" xml:space="preserve">
+    <value>מכשיר ארגוני יומיומי עם הגנות חזקות לנתוני עבודה ולחשבונות. מאוזן לפרודוקטיביות עם גישה מושכלת, רישום אירועים והתנהלות עדכונים.</value>
+  </data>
+  <data name="DeviceUsageIntent-SpecializedAccessWorkstation-Title" xml:space="preserve">
+    <value>תחנת עבודה לגישה ייעודית</value>
+  </data>
+  <data name="DeviceUsageIntent-SpecializedAccessWorkstation-Description" xml:space="preserve">
+    <value>משתמש האבטחה הייעודי דורש סביבה מבוקרת יותר, תוך שמירה על אפשרות לביצוע פעולות כגון דוא״ל וגלישה באינטרנט בחוויית שימוש פשוטה.</value>
+  </data>
+  <data name="DeviceUsageIntent-PrivilegedAccessWorkstation-Title" xml:space="preserve">
+    <value>תחנת עבודה לגישה מיוחסת</value>
+  </data>
+  <data name="DeviceUsageIntent-PrivilegedAccessWorkstation-Description" xml:space="preserve">
+    <value>זוהי תצורת האבטחה הגבוהה ביותר, המיועדת לתפקידים רגישים במיוחד, אשר פגיעה בחשבונם עלולה לגרום להשפעה משמעותית או מהותית על הארגון.</value>
+  </data>
+  <data name="ApplyIntentBasedSecurityMeasuresButton.Content" xml:space="preserve">
+    <value>החל</value>
+  </data>
+  <data name="ApplyIntentBasedSecurityMeasuresButton.ToolTipService.ToolTip" xml:space="preserve">
+  <value>החל את כל אמצעי האבטחה המוצגים להלן המבוססים על ייעודי השימוש במכשיר שנבחרו.</value>
+  </data>
+  <data name="ApplyIntentBasedSecurityMeasuresButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>החל את כל אמצעי האבטחה המוצגים להלן המבוססים על ייעודי השימוש במכשיר שנבחרו.</value>
+  </data>
+  <data name="ResultingSecurityMeasures.Text" xml:space="preserve">
+    <value>אמצעי האבטחה שייושמו</value>
+  </data>
+  <data name="ResultingSecurityMeasuresCaption.Text" xml:space="preserve">
+    <value>אלה ייושמו בעת לחיצה על החל.</value>
+  </data>
+  <data name="SelectDeviceIntents.Text" xml:space="preserve">
+    <value>בחירת ייעודי שימוש למכשיר</value>
+  </data>
+  <data name="SelectDeviceIntentsCaption.Text" xml:space="preserve">
+    <value>בחרו ייעוד אחד או יותר כדי להתאים את תצורת האבטחה שתוחל.</value>
+  </data>
+  <data name="Presets.Text" xml:space="preserve">
+    <value>תצורות מוגדרות מראש</value>
+  </data>
+    <data name="DeviceIntents.Text" xml:space="preserve">
+    <value>אינטנטים של המכשיר</value>
+  </data>
 </root>
