--- a/Harden System Security/Strings/pl-PL/Resources.resw
+++ b/Harden System Security/Strings/pl-PL/Resources.resw
@@ -4092,4 +4092,67 @@ Odcisk Palca: {3}</value>
     <comment>Protection Category Description</comment>
     <value>Zastosuj zalecane nadpisania dla bazowych poziomów zabezpieczeń Microsoft, aby przywrócić część istotnych funkcji, które zostały przez nie wyłączone.</value>
   </data>
+  <data name="DeviceUsageIntent-Development-Title" xml:space="preserve">
+    <value>Programowanie</value>
+  </data>
+  <data name="DeviceUsageIntent-Development-Description" xml:space="preserve">
+    <value>Przeznaczone do pisania i testowania oprogramowania. Używa bezpiecznych ustawień domyślnych, jednocześnie umożliwiając popularne narzędzia deweloperskie i lokalne kompilacje bez zbędnych ograniczeń.</value>
+  </data>
+  <data name="DeviceUsageIntent-Gaming-Title" xml:space="preserve">
+    <value>Gry</value>
+  </data>
+  <data name="DeviceUsageIntent-Gaming-Description" xml:space="preserve">
+    <value>Dostrojone pod wydajność i zgodność z grami. Zachowuje kluczowe zabezpieczenia, unikając ustawień, które mogą wpływać na rozgrywkę.</value>
+  </data>
+  <data name="DeviceUsageIntent-School-Title" xml:space="preserve">
+    <value>Szkoła</value>
+  </data>
+  <data name="DeviceUsageIntent-School-Description" xml:space="preserve">
+    <value>Odpowiednie dla uczniów i studentów, zachowuje zgodność z aplikacjami edukacyjnymi i unika ciężkich kontroli korporacyjnych.</value>
+  </data>
+  <data name="DeviceUsageIntent-Business-Title" xml:space="preserve">
+    <value>Biznes</value>
+  </data>
+  <data name="DeviceUsageIntent-Business-Description" xml:space="preserve">
+    <value>Codzienne urządzenie korporacyjne z silnymi zabezpieczeniami danych służbowych i kont. Zrównoważone pod kątem produktywności dzięki rozsądnemu dostępowi, rejestrowaniu i zachowaniu aktualizacji.</value>
+  </data>
+  <data name="DeviceUsageIntent-SpecializedAccessWorkstation-Title" xml:space="preserve">
+    <value>Specjalistyczna stacja robocza z dostępem specjalnym</value>
+  </data>
+  <data name="DeviceUsageIntent-SpecializedAccessWorkstation-Description" xml:space="preserve">
+    <value>Użytkownik o specjalistycznych wymaganiach bezpieczeństwa potrzebuje bardziej kontrolowanego środowiska, przy zachowaniu możliwości wykonywania czynności, takich jak e‑mail i przeglądanie stron WWW, w prostym w obsłudze środowisku.</value>
+  </data>
+  <data name="DeviceUsageIntent-PrivilegedAccessWorkstation-Title" xml:space="preserve">
+    <value>Stacja robocza z uprzywilejowanym dostępem</value>
+  </data>
+  <data name="DeviceUsageIntent-PrivilegedAccessWorkstation-Description" xml:space="preserve">
+    <value>To najwyższa konfiguracja zabezpieczeń, zaprojektowana dla wyjątkowo wrażliwych ról, gdzie kompromitacja konta miałaby istotny lub materialny wpływ na organizację.</value>
+  </data>
+  <data name="ApplyIntentBasedSecurityMeasuresButton.Content" xml:space="preserve">
+    <value>Zastosuj</value>
+  </data>
+  <data name="ApplyIntentBasedSecurityMeasuresButton.ToolTipService.ToolTip" xml:space="preserve">
+  <value>Zastosuj wszystkie poniższe środki bezpieczeństwa oparte na wybranych przez Ciebie scenariuszach użycia urządzenia.</value>
+  </data>
+  <data name="ApplyIntentBasedSecurityMeasuresButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Zastosuj wszystkie poniższe środki bezpieczeństwa oparte na wybranych przez Ciebie scenariuszach użycia urządzenia.</value>
+  </data>
+  <data name="ResultingSecurityMeasures.Text" xml:space="preserve">
+    <value>Środki bezpieczeństwa do zastosowania</value>
+  </data>
+  <data name="ResultingSecurityMeasuresCaption.Text" xml:space="preserve">
+    <value>Zostaną zastosowane po kliknięciu Zastosuj.</value>
+  </data>
+  <data name="SelectDeviceIntents.Text" xml:space="preserve">
+    <value>Wybierz scenariusze użycia urządzenia</value>
+  </data>
+  <data name="SelectDeviceIntentsCaption.Text" xml:space="preserve">
+    <value>Wybierz jeden lub więcej scenariuszy, aby dopasować stosowaną konfigurację zabezpieczeń.</value>
+  </data>
+  <data name="Presets.Text" xml:space="preserve">
+    <value>Ustawienia wstępne</value>
+  </data>
+    <data name="DeviceIntents.Text" xml:space="preserve">
+    <value>Intenty urządzenia</value>
+  </data>
 </root>
